failed 16s 10000 elements over ±10000 in 1000 buckets